cluster/apps/media/lunasea/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app lunasea
  namespace: media
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: *app
          image: ghcr.io/jagandeepbrar/lunasea:edge@sha256:83309b0af10e06dff235a769e1bef01fa9799078b621149fcaf3e6abe0bae396
          imagePullPolicy: IfNotPresent
          ports:
            - name: &port http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: *port
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 500Mi
